fix: modified .gitignore and worker

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ target/
 GC1.iml
 src/main/java/it/polimi/ingsw/server/
 src/main/java/it/polimi/ingsw/client/
+
+src/main/java/it/polimi/ingsw/model/player/Minotaur.java
+src/main/java/it/polimi/ingsw/model/player/moveEvent.java
+src/main/java/it/polimi/ingsw/model/player/moveListener.java
+src/main/java/it/polimi/ingsw/controller/PhasesController.java
+src/test/java/it/polimi/ingsw/model/player/AtlasTest.java
