--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,14 @@
   <artifactId>GC1</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>GC1</name>
+  <name>GC01</name>
   <url>https://lucapirovano.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <!--<maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>-->
+    <maven.compiler.release>14</maven.compiler.release>
   </properties>
 
   <dependencies>
@@ -49,8 +50,12 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.8.1</version>
+          <configuration>
+            <release>14</release>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -90,4 +95,5 @@
           </plugin>
       </plugins>
   </build>
+
 </project>
