--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,16 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
-                  <source>8</source>
-                  <target>8</target>
+                  <source>14</source>
+                  <target>14</target>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>13</source>
+                  <target>13</target>
               </configuration>
           </plugin>
       </plugins>
