--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ GC1.iml
 src/main/java/it/polimi/ingsw/modelView/player/Minotaur.java
 src/test/java/it/polimi/ingsw/modelView/player/AtlasTest.java
 graphics
+
+src/main/java/it/polimi/ingsw/client/cli/GUI.java
+src/main/java/it/polimi/ingsw/client/cli/Prova.fxml
