--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ GC1.iml
 
 src/main/java/it/polimi/ingsw/modelView/player/Minotaur.java
 src/test/java/it/polimi/ingsw/modelView/player/AtlasTest.java
+src/main/java/it/polimi/ingsw/client/cli/GUI11.java
+
+
 graphicsResources
