--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 target/
 .vscode/
 
-GC1.iml
+*.iml
 
 src/main/java/it/polimi/ingsw/modelView/player/Minotaur.java
 src/test/java/it/polimi/ingsw/modelView/player/AtlasTest.java
