fix: .gitignore fixed

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -119,9 +124,6 @@
       <configuration>
         <excludes>
           <exclude>META-INF/**</exclude>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
         </excludes>
       </configuration>
       <executions>
