--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <maven.compiler.target>1.14</maven.compiler.target>
     <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
     <sonar.language>java</sonar.language>
+    <sonar.projectKey>ing-sw-2020</sonar.projectKey>
   </properties>
 
   <dependencies>
