Javadoc audit and fixed .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 target/
 .vscode/
 out/
-
 *.iml
-
+src/**/META-INF
 src/main/java/it/polimi/ingsw/modelView/player/Minotaur.java
 src/test/java/it/polimi/ingsw/modelView/player/AtlasTest.java
 
