--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
       <artifactId>javafx-fxml</artifactId>
       <version>14</version>
     </dependency>
+    <dependency>
+      <groupId>org.sonarsource.scanner.maven</groupId>
+      <artifactId>sonar-maven-plugin</artifactId>
+      <version>3.7.0.1746</version>
+    </dependency>
+
   </dependencies>
 
 
@@ -112,7 +118,7 @@
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-        <version>3.6.0.1398</version>
+        <version>3.7.0.1746</version>
       </plugin>
     </plugins>
   </build>
