--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <maven.compiler.source>1.14</maven.compiler.source>
         <maven.compiler.target>1.14</maven.compiler.target>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.projectKey>ing-sw-2020-raw</sonar.projectKey>
+        <sonar.projectKey>ing-sw-2020</sonar.projectKey>
     </properties>
 
     <dependencies>
