--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-docs/* linguist-vendored
+*.css linguist-language=Java
+*.html linguist-language=Java
+*.js linguist-language=Java
+*.zip linguist-language=Java
